crates/assembly/src/tests/snapshots/miden_assembly__tests__procedures__program_with_nested_procedure.snap
---
source: crates/assembly/src/tests/procedures.rs
expression: program
---
begin
    basic_block
        push(2147483648)
        push(4294967294)
        mstore
        drop
        push(2)
        push(4)
        add
        push(3)
        noop
        push(7)
        mul
        push(11)
        push(5)
        push(3)
        push(7)
        mul
        add
        neg
        add
        noop
        noop
        noop
    end
end
