crates/assembly/src/tests/snapshots/miden_assembly__tests__procedures__program_with_one_procedure.snap
---
source: crates/assembly/src/tests/procedures.rs
expression: program
---
begin
    basic_block
        push(2147483648)
        push(4294967294)
        mstore
        drop
        push(2)
        push(3)
        add
        push(3)
        noop
        push(7)
        mul
    end
end
