crates/assembly/src/tests/snapshots/miden_assembly__tests__procedures__program_with_proc_locals.snap
---
source: crates/assembly/src/tests/procedures.rs
expression: program
---
begin
    basic_block
        push(2147483648)
        push(4294967294)
        mstore
        drop
        push(10)
        push(9)
        push(8)
        push(4)
        noop
        noop
        push(4294967294)
        mload
        add
        push(4294967294)
        mstore
        drop
        push(18446744069414584317)
        push(4294967294)
        mload
        add
        mstore
        drop
        add
        push(18446744069414584317)
        push(4294967294)
        mload
        add
        mload
        mul
        push(18446744069414584317)
        push(4294967294)
        mload
        add
        push(4294967294)
        mstore
        drop
    end
end
